--- a/services/vote/vote-service.yaml
+++ b/services/vote/vote-service.yaml
@@ -2,11 +2,12 @@ apiVersion: v1
 kind: Service
 metadata:
   name: vote-service
-  namespace: vote
+  namespace: internal
   labels:
     app: vote-service
 spec:
-  type: NodePort
+  # temporarily on a load balancer to test
+  type: LoadBalancer
   ports:
     - port: 8081
       targetPort: http
