--- a/services/vote/vote-service.yaml
+++ b/services/vote/vote-service.yaml
@@ -6,8 +6,7 @@ metadata:
   labels:
     app: vote-service
 spec:
-  # temporarily on a load balancer to test
-  type: LoadBalancer
+  type: NodePort
   ports:
     - port: 80
       targetPort: http
