--- a/base/kube-system/alb-ingress-controller-deployment.yaml
+++ b/base/kube-system/alb-ingress-controller-deployment.yaml
@@ -37,7 +37,7 @@ spec:
             # Name of your cluster. Used when naming resources created
             # by the ALB Ingress Controller, providing distinction between
             # clusters.
-            - --cluster-name={{ .ClusterName }}
+            - --cluster-name=dev-services
 
             # AWS VPC ID this ingress controller will use to create AWS resources.
             # If unspecified, it will be discovered from ec2metadata.
@@ -46,7 +46,8 @@ spec:
             # AWS region this ingress controller will operate in.
             # If unspecified, it will be discovered from ec2metadata.
             # List of regions: http://docs.aws.amazon.com/general/latest/gr/rande.html#vpc_region
-            - --aws-region={{ .Region }}
+            - --aws-region=us-west-2
+            - --aws-vpc-id=vpc-067aef4a6ca3963d1
 
             # Enables logging on all outbound requests sent to the AWS API.
             # If logging is desired, set to true.
