--- a/services/vote/vote-deployment.yaml
+++ b/services/vote/vote-deployment.yaml
@@ -9,6 +9,7 @@ metadata:
   annotations:
     # Container Image Automated Updates
     fluxcd.io/automated: "true"
+    fluxcd.io/tag.vote-service: glob:master_.*
     # do not apply this manifest on the cluster
     #flux.weave.works/ignore: "true"
 spec:
@@ -22,40 +23,40 @@ spec:
         app: vote-service
     spec:
       containers:
-      - name: vote-service
-        image: 981873564135.dkr.ecr.us-west-2.amazonaws.com/rust-vote-service:a0b578d5
-        imagePullPolicy: IfNotPresent
-        resources:
-          limits:
-            memory: "128Mi"
-            cpu: "500m"
-        ports:
-        - containerPort: 8000
-          name: http
-          protocol: TCP
-        livenessProbe:
-          httpGet:
-            path: /vote/health
-            port: http
-        readinessProbe:
-          httpGet:
-            path: /vote/~/ready
-            port: http
-        env:
-        - name: RUST_LOG
-          value: "info,actix_web=info"
-        - name: BASE_PATH
-          value: "vote"
-        - name: PORT
-          value: "8000"
-        - name: TABLE_NAME
-          value: "WbVotes-stage"
-        - name: DYNAMO_REGION
-          value: "us-west-2"
-        - name: DYNAMO_ENDPOINT
-          value: "https://dynamodb.us-west-2.amazonaws.com"
-        - name: DATABASE_URL
-          valueFrom:
-            secretKeyRef:
-              name: vote-secrets
-              key: database-url
+        - name: vote-service
+          image: 981873564135.dkr.ecr.us-west-2.amazonaws.com/rust-vote-service:master_cf23671
+          imagePullPolicy: IfNotPresent
+          resources:
+            limits:
+              memory: "128Mi"
+              cpu: "500m"
+          ports:
+            - containerPort: 8000
+              name: http
+              protocol: TCP
+          livenessProbe:
+            httpGet:
+              path: /vote/health
+              port: http
+          readinessProbe:
+            httpGet:
+              path: /vote/~/ready
+              port: http
+          env:
+            - name: RUST_LOG
+              value: "info,actix_web=info"
+            - name: BASE_PATH
+              value: "vote"
+            - name: PORT
+              value: "8000"
+            - name: TABLE_NAME
+              value: "WbVotes-stage"
+            - name: DYNAMO_REGION
+              value: "us-west-2"
+            - name: DYNAMO_ENDPOINT
+              value: "https://dynamodb.us-west-2.amazonaws.com"
+            - name: DATABASE_URL
+              valueFrom:
+                secretKeyRef:
+                  name: vote-secrets
+                  key: database-url
