--- a/base/gateway/konga-deployment.yaml
+++ b/base/gateway/konga-deployment.yaml
@@ -30,7 +30,7 @@ spec:
               protocol: TCP
           env:
             - name: NODE_ENV
-              value: production
+              value: development
             - name: DB_ADAPTER
               value: mysql
             - name: DB_URI
