--- a/base/gateway/helm.yaml
+++ b/base/gateway/helm.yaml
@@ -13,10 +13,10 @@ spec:
     ingressController.installCrds: false
     ingressController:
       installCRDs: false
-    # admin:
-    #   enabled: true
-    #   http:
-    #     enabled: true
+    admin:
+      enabled: true
+      http:
+        enabled: true
     # env:
     #   database: postgres
     #   pg_host: test.cluster-cui4fpppzxf7.us-west-2.rds.amazonaws.com
